[gd_scene load_steps=5 format=3 uid="uid://cfmb3mmeue8au"]

[ext_resource type="Script" uid="uid://j5jhi8fi2uk0" path="res://UI/LevelResults.gd" id="1_4n7mi"]
[ext_resource type="Script" uid="uid://bea0sp1ppn3e6" path="res://UI/HUDManager.gd" id="1_t2p4a"]
[ext_resource type="PackedScene" uid="uid://b0xffv4xtxnru" path="res://UI/Scenes/FadeToBlackTransition.tscn" id="1_yixhe"]
[ext_resource type="PackedScene" uid="uid://psh4s5sym8kd" path="res://UI/Scenes/Textbox.tscn" id="2_ijstf"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_t2p4a")

[node name="LevelManager" parent="." instance=ExtResource("1_yixhe")]
modulate = Color(1, 1, 1, 1)

[node name="Level Results" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("1_4n7mi")

[node name="Container" type="CenterContainer" parent="Level Results"]
offset_right = 320.0
offset_bottom = 180.0

[node name="BoxContainer" type="BoxContainer" parent="Level Results/Container"]
layout_mode = 2
vertical = true

[node name="Title" type="RichTextLabel" parent="Level Results/Container/BoxContainer"]
custom_minimum_size = Vector2(320, 52)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 48
theme_override_font_sizes/italics_font_size = 36
theme_override_font_sizes/mono_font_size = 48
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "House Packed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="RichTextLabel" parent="Level Results/Container/BoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Your score is:"
horizontal_alignment = 1

[node name="Stars Text" type="RichTextLabel" parent="Level Results/Container/BoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "You earned..."
horizontal_alignment = 1

[node name="Star Box" type="Panel" parent="Level Results/Container/BoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Panel" type="HFlowContainer" parent="Level Results/Container/BoxContainer"]
custom_minimum_size = Vector2(320, 40)
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Replay" type="Button" parent="Level Results/Container/BoxContainer/Panel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Replay"

[node name="Next Level" type="Button" parent="Level Results/Container/BoxContainer/Panel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Next Level"

[node name="Quit" type="Button" parent="Level Results/Container/BoxContainer/Panel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="Dialogue" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Textbox" parent="Dialogue" instance=ExtResource("2_ijstf")]

[connection signal="pressed" from="Level Results/Container/BoxContainer/Panel/Replay" to="Level Results" method="_on_replay_level_pressed"]
[connection signal="pressed" from="Level Results/Container/BoxContainer/Panel/Next Level" to="Level Results" method="_on_next_level_pressed"]
[connection signal="pressed" from="Level Results/Container/BoxContainer/Panel/Quit" to="Level Results" method="_on_exit_game_pressed"]
